--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,7 +197,7 @@
     <string name="join_group">加入团队</string>
     <string name="reject_invite">拒绝邀请</string>
     <string name="get_invoice_prompt">发票抬头：</string>
-    <string name="invoice_invalid">还没公司，开啥发票o(╯□╰)o</string>
+    <string name="invoice_invalid">尚未加入任何公司</string>
     <string name="powered_by">Powered by 云报销</string>
     <string name="category_management">类别管理</string>
     <string name="edit_category">编辑类别</string>
