--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,7 +303,7 @@
     <string name="error_modify_network_unavailable">网络未连接，无法修改</string>
     <string name="error_delete_network_unavailable">网络未连接，无法删除</string>
     <string name="error_delete_item_submitted">此笔消费已提交，无法删除</string>
-    <string name="error_delete_report_submitted">报告已提交，无法删除</string>
+    <string name="error_delete_report_submitted">你尚未处理该报告，无法删除</string>
     <string name="error_export_network_unavailable">网络未连接，无法导出</string>
     <string name="error_export_report_not_uploaded">报告未同步到服务器，无法导出</string>
     <string name="error_export_not_finished">报销未完成，无法导出</string>
