--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_name">云报销</string>
     <string name="background">背景</string>
     <string name="settings">设置</string>
+    <string name="ok">好</string>
     <string name="on">开</string>
     <string name="off">关</string>
     <string name="not_available">N/A</string>
@@ -47,6 +48,7 @@
     <string name="finish">直接通过</string>
     <string name="exit">退出</string>
     <string name="join">加入</string>
+    <string name="guide">指导</string>
     
     <string name="sign_up">注册</string>
     <string name="sign_up_by_phone">手机注册</string>
@@ -80,15 +82,18 @@
     <string name="create_prompt">你可以在个人中心邀请您的同事加入你的公司，也可以在PC端进行批量邀请操作。</string>
     <string name="modify_name">修改姓名</string>
     <string name="choose_company">选择公司</string>
+    <string name="invited_company">邀请过你的公司</string>
     <string name="search_result">搜索结果</string>
     <string name="search_result_empty">没有符合条件的公司</string>
     <string name="applied_to_join">已申请加入</string>
-    <string name="join_prompt">你的申请被通过后，才能正常的提交报销申请，或者审核他人报告。\n\n在这之前，你可以用云报销，将需要报销的消费记录下来。</string>
+    <string name="joined">你已加入</string>
     
     <string name="reimbursement">消费</string>
     <string name="report">报告</string>
     <string name="statistics">统计</string>
     <string name="me">自己</string>
+    <string name="reim_guide">点击＋开始记录你的第一笔消费</string>
+    <string name="report_guide">点击这里创建你的第一份报销报告</string>
     
     <string name="sort">排序</string>
     <string name="sort_consumed_date">消费时间</string>
@@ -292,6 +297,8 @@
     <string name="prompt_no_need_to_alarm">报告未在审核过程中，无需发送提醒</string>
     <string name="prompt_choose_or_finish">您希望直接通过，还是选择其他人继续审批这份报告？</string>
     <string name="prompt_no_lastest_data">还没到下个月呢</string>
+    <string name="prompt_join">你的申请被通过后，才能正常的提交报销申请，或者审核他人报告。\n\n在这之前，你可以用云报销，将需要报销的消费记录下来。</string>
+    <string name="prompt_joined">现在你可以使用云报销记录你的消费，向你的上级提交报销申请，或者审批他人的报销。</string>
     
     <string name="error_wrong_code">验证码错误</string>
     <string name="error_no_code">未获取到任何验证码</string>
@@ -390,7 +397,6 @@
     <string name="succeed_in_sending_invite">发送成功</string>
     <string name="succeed_in_sending_comment">发表成功</string>
     <string name="succeed_in_submitting_report">提交成功</string>
-    <string name="succeed_in_signing_up">注册成功!正在获取数据</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
     <string name="succeed_in_deleting">删除成功</string>
 
@@ -480,6 +486,6 @@
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
     
     <string name="surprise">如果你能看到这个窗口，说明你是一个极有探索欲望的同学，如数科技就是喜欢这样的人。你有没有兴趣加入我们呢？请发送简历到hr@cloudbaoxiao.com。</string>
-    <string name="ok">好的我知道了</string>
+    <string name="surprise_ok">好的我知道了</string>
 
 </resources>
