--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,9 @@
     <string name="month">月</string>
     <string name="second">秒</string>
     <string name="total">总计</string>
-    
+    <string name="province">省</string>
+    <string name="region">自治区</string>
+
     <string name="confirm">确定</string>
     <string name="save">保存</string>
     <string name="cancel">取消</string>
@@ -350,6 +352,7 @@
     <string name="error_phone_empty">请输入手机号</string>
     <string name="error_new_phone_empty">请输入新手机号</string>
     <string name="error_phone_wrong_format">手机号格式不正确</string>
+    <string name="error_account_name_empty">请输入户名</string>
     <string name="error_bank_account_wrong_format">银行账号格式不正确</string>
     <string name="error_new_nickname_empty">请填写姓名</string>
     <string name="error_company_name_empty">请设置公司名称</string>
@@ -445,7 +448,10 @@
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
     <string name="succeed_in_deleting">删除成功</string>
     <string name="succeed_in_applying">申请加入成功</string>
+    <string name="succeed_in_setting_account_name">户名设置成功</string>
     <string name="succeed_in_setting_bank_account">银行账户设置成功</string>
+    <string name="succeed_in_setting_bank_name">开户行设置成功</string>
+    <string name="succeed_in_setting_bank_location">开户地设置成功</string>
 
     <string name="failed_to_read_data">数据读取失败</string>
     <string name="failed_to_get_code">获取验证码失败</string>
@@ -496,7 +502,10 @@
     <string name="failed_to_delete">删除失败</string>
     <string name="failed_to_search_companies">搜索公司失败</string>
     <string name="failed_to_apply">申请加入公司失败</string>
+    <string name="failed_to_set_account_name">设置户名失败</string>
     <string name="failed_to_set_bank_account">设置银行账户失败</string>
+    <string name="failed_to_set_bank_name">设置开户行失败</string>
+    <string name="failed_to_set_bank_location">设置开户地失败</string>
 
     <string name="no_pending_reports">报告都已处理完毕</string>
     <string name="no_image">未找到图片</string>
