--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -413,6 +413,7 @@
     <string name="error_request_network_unavailable">网络未连接，无法发送请求</string>
     <string name="error_gps_unavailable">定位服务不可用，请打开定位服务或手动输入商家名称</string>
     <string name="error_self_as_manager">不能选择自己作为上级</string>
+    <string name="error_trial_invite">试用账号暂时无法邀请别人</string>
     <string name="error_no_group">你还没加入任何公司</string>
     <string name="error_item_not_found">未在本地找到消费</string>
     <string name="error_report_approved">报告已被审批</string>
