modify share to others

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="hot">热门</string>
     <string name="password">密码</string>
     <string name="wechat">微信</string>
+    <string name="wechat_session">微信好友</string>
+    <string name="wechat_moments">朋友圈</string>
     
     <string name="sign_up">注册</string>
     <string name="quick_sign_up">快速注册</string>
@@ -242,7 +244,6 @@
     <string name="message_from_admin">来自管理员的消息</string>
     <string name="invite">邀请好友</string>
     <string name="send_invite">发送邀请</string>
-    <string name="share">分享</string>
     <string name="custom_service">联系客服</string>
     <string name="personal_info">个人信息</string>
     <string name="email">邮箱</string>
@@ -284,18 +285,15 @@
     <string name="edit_tag">编辑标签</string>
     <string name="about_us">关于我们</string>
     <string name="feedback">意见反馈</string>
+    <string name="share">分享给他人</string>
     <string name="feedback_code">+86</string>
     <string name="version">版本</string>
     <string name="about_footer">Copyright&#169; 2014&#8211;2015 北京如数科技有限公司</string>
-    
-    <string name="share_wechat">微信分享</string>
-    <string name="share_wechat_content">这是来自云报销的微信分享</string>
-    <string name="share_moment">朋友圈分享</string>
-    <string name="share_moment_content">这是来自云报销的朋友圈分享</string>
-    <string name="share_weibo">微博分享</string>
-    <string name="share_weibo_content">这是来自云报销的微博分享</string>
-    <string name="share_qq">QQ分享</string>
-    <string name="share_qq_content">这是来自云报销的QQ分享</string>
+    <string name="wechat_share_title">云报销 - 对报销的怨言到此为止</string>
+    <string name="wechat_share_description">专注与解决企业的财务报销与审批问题，同时支持iOS、Android 以及 Web端。</string>
+    <string name="wechat_share_url_main">https://www.cloudbaoxiao.com</string>
+    <string name="wechat_share_url_download">https://admin.cloudbaoxiao.com/install/index</string>
+
     
     <string name="input_username">请输入手机/邮箱</string>
     <string name="input_password">请输入密码</string>
