--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,8 +100,6 @@
     <string name="no_contacts">没有检索到联系人</string>
     <string name="open_settings">打开设置</string>
     <string name="input_contact">填写手机号或邮箱</string>
-    <string name="wechat_title">你的同事 %1$s 邀请你加入「%2$s」</string>
-    <string name="wechat_description">你的同事 %1$s 邀请你加入「%2$s」。加入后，你就可以方便的使用「云报销」的移动端以及Web端，进行费用的报销和审批了。</string>
     <string name="input_contact_manually_and_divided">请手动填写手机号或邮箱，用逗号分开</string>
     <string name="invite_by_pc">可通过访问网页端批量邀请其他同事加入</string>
     <string name="invitation_sent">已经向你的 %1$d 个同事发送邀请。他们接受邀请后，就能加入你创建的公司。你也可以通过我们的 网页端 批量邀请其他同事加入。</string>
@@ -296,8 +294,9 @@
     <string name="feedback_code">+86</string>
     <string name="version">版本</string>
     <string name="about_footer">Copyright&#169; 2014&#8211;2015 北京如数科技有限公司</string>
-    <string name="wechat_share_title">云报销 - 对报销的怨言到此为止</string>
-    <string name="wechat_share_description">专注与解决企业的财务报销与审批问题，同时支持iOS、Android 以及 Web端。</string>
+    <string name="wechat_share_title">云报销 - 开启全新的报销体验</string>
+    <string name="wechat_share_description">点击使用「云报销」，结束你所有对报销的怨言。</string>
+    <string name="wechat_invite_description">%1$s邀请你加入「%2$s」，点击加入就可以开始使用了。</string>
     
     <string name="input_username">请输入手机/邮箱</string>
     <string name="input_password">请输入密码</string>
